--- a/src/app/Albums/Components/Photos/Photos.scss
+++ b/src/app/Albums/Components/Photos/Photos.scss
@@ -3,8 +3,4 @@
 :host {
     display: block;
     position: relative;
-
-    .photos {
-        margin-bottom: $spacer;
-    }
 }
